--- a/arability/app/views/kaminari/_last_page.html.erb
+++ b/arability/app/views/kaminari/_last_page.html.erb
@@ -1,11 +1,11 @@
-<%# Link to the "Next" page
+<%# Link to the "Last" page
   - available local variables
-    url:           url to the next page
+    url:           url to the last page
     current_page:  a page object for the currently displayed page
     total_pages:   total number of pages
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
 <li>
-  <%= link_to_unless current_page.last?, raw(t 'views.pagination.next'), url, :rel => 'next', :remote => remote %>
+  <%= link_to_unless current_page.last?, raw(t 'views.pagination.last'), url, {:remote => remote} %>
 </li>
