--- a/arability/app/views/kaminari/_prev_page.html.erb
+++ b/arability/app/views/kaminari/_prev_page.html.erb
@@ -1,1 +1,11 @@
-<%= link_to_unless current_page.first?, raw('&laquo; Newer'), url, :remote => remote do |name| -%><span class="disabled"><%= name %></span><% end -%>
+<%# Link to the "Previous" page
+  - available local variables
+    url:           url to the previous page
+    current_page:  a page object for the currently displayed page
+    total_pages:   total number of pages
+    per_page:      number of items to fetch per page
+    remote:        data-remote
+-%>
+<li>
+  <%= link_to_unless current_page.first?, raw(t 'views.pagination.previous'), url, :rel => 'prev', :remote => remote %>
+</li>
