--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -83,7 +83,7 @@
               </td>
               <td style="text-align:center" >
                 
-                <a href="<%= projects_remove_word_path(project_id: @project.id, word_id: @words[count].id) %>" class= "btn btn-danger"><i class="icon-remove"></i></a>  
+                <a href="<%= projects_remove_word_path(project_id: @project.id, word_id: @words[count].id) %>" class= "btn btn-danger" style="vertical-align:middle;"><%= t(:remove_from_project) %></a>  
                 
               </td>
               <% count = count + 1 %>
