[issue #353] [Fixed] fixes the style of the words table in the project view

--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -48,6 +48,11 @@
   height:50px;
 }
 
+#synonym_select{
+  margin-top: 7px;
+  margin-bottom: 7px;
+}
+
 #synonym_button{
   height:50px;
   width:150px;
