--- a/arability/app/views/admin/_sidebar-nav.html.erb
+++ b/arability/app/views/admin/_sidebar-nav.html.erb
@@ -9,6 +9,9 @@
 			<li <%= active == "list-developers"? "class=active" : "" %>>
 				<a href="/admin/list/developers">عرض المطوريين</a>
 			</li>
+			<li <%= active == "add-admin"? "class=active" : "" %>>
+				<a href="/admin/make_admin">اضافة مشرف</a>
+			</li>
 			<li <%= active == "list-admins"? "class=active" : "" %>>
 				<a href="/admin/list/admins">عرض المشرفيين</a>
 			</li>
