[Issue #360] [WIP] changes color of report button

--- a/arability/app/views/games/_vote.html.erb
+++ b/arability/app/views/games/_vote.html.erb
@@ -81,7 +81,7 @@
 				<button class="btn btn-primary"  id="skip_button" type="submit" onclick="skip_keyword()"><%= t(:skip_this_keyword) %></button>
 			</td>
 			<td style="width:230px; text-align:center;">
-				<a href="#report_modal" role="button" class="btn btn-primary" onClick="modalToggle()" id="launch_report"><%= t(:report_game) %></a>
+				<a href="#report_modal" role="button" class="btn btn-danger" onClick="modalToggle()" id="launch_report"><%= t(:report_game) %></a>
 			</td>
 		</tr>
 	</table>
