--- a/arability/app/views/games/_vote.html.erb
+++ b/arability/app/views/games/_vote.html.erb
@@ -127,42 +127,61 @@
 	<%= render "search/submit-report.js" %>
 </script>
 <div class="alert alert-success" id="report_success" style="display:none; font-size: 16px;">
-			<div style="text-align:center;"><%= t(:report_sent_success) %></div>
-		</div>
-		<div class="alert alert-block alert-error" id="report_failure" style="display:none; font-size: 16px;">
-		  <button type="button" class="close" onclick="restoreError()">×</button>
-		  <h4 class="alert-heading"><%= t(:oh_snap) %></h4>
-		  <p><%= t(:check_connection) %></p>
-	  </div>
-	  <script type="text/javascript">
-			<% if I18n.locale == :ar %>
-				$("#launch_report").css("font-size","18px");
-			<% else %>
-				$("#launch_report").css("font-size","13px");
-			<% end %>
-		</script>
+	<div style="text-align:center;"><%= t(:report_sent_success) %>
+	</div>
+</div>
+<div class="alert alert-block alert-error" id="report_failure" style="display:none; font-size: 16px;">
+	<button type="button" class="close" onclick="restoreError()">
+		×
+	</button>
+	<h4 class="alert-heading">
+		<%= t(:oh_snap) %>
+	</h4>
+	<p>
+		<%= t(:check_connection) %>
+	</p>
+</div>
+<script type="text/javascript">
+	<% if I18n.locale == :ar %>
+		$("#launch_report").css("font-size","18px");
+	<% else %>
+		$("#launch_report").css("font-size","13px");
+	<% end %>
+</script>
 <div id="report_modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="font-size: 16px;">
-			<div class="modal-header">
-			  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-			  <h3 id="modal_label"><%= t(:report_abusive) %></h3>
-			</div>
-			<div class="modal-body">
-			  <p><%= t(:help_us_through_reporting) %></p>
-			  <hr>
-			  <h4><%= t(:words_in_page)%></h4>
-			  <%= check_box_tag "chkbox", [@keyword.id, "Keyword"], false, onclick: "setChecked(this)", is_checked: false %>
-			  <%= @keyword.name %>
-			  <br>
-			  <% if !@synonym_list.blank? %>
-			  	<% @synonym_list.each do |synonym| %>
+	<div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+			&times;
+		</button>
+		<h3 id="modal_label">
+			<%= t(:report_abusive) %>
+		</h3>
+	</div>
+	<div class="modal-body">
+		<p>
+			<%= t(:help_us_through_reporting) %>
+		</p>
+		<hr>
+		<h4>
+			<%= t(:words_in_page)%>
+		</h4>
+		<%= check_box_tag "chkbox", [@keyword.id, "Keyword"], false, onclick: "setChecked(this)", is_checked: false %>
+		<%= @keyword.name %>
+		<br>
+		<% if !@synonym_list.blank? %>
+			<% @synonym_list.each do |synonym| %>
 			  	<%= check_box_tag "chkbox", [synonym.id, "Synonym"], false, onclick: "setChecked(this)", is_checked: false %>
 			  	<%= synonym.name %>
 			  	<br>
-			  	<% end %>
-			  <% end %>
-			</div>
-			<div class="modal-footer">
-			  <button class="btn" data-dismiss="modal"><%= t(:close) %></button>
-			  <button class="btn btn-primary" onclick="report_submission()" data-dismiss="modal"><%= t(:submit) %></button>
-			</div>
-		</div>
+			<% end %>
+		<% end %>
+	</div>
+	<div class="modal-footer">
+		<button class="btn" data-dismiss="modal">
+			<%= t(:close) %>
+		</button>
+		<button class="btn btn-primary" onclick="report_submission()" data-dismiss="modal">
+			<%= t(:submit) %>
+		</button>
+	</div>
+</div>
