[issue #350]fixed error rendering and two settings buttons

--- a/arability/app/views/pages/home.html.erb
+++ b/arability/app/views/pages/home.html.erb
@@ -280,4 +280,9 @@
   <% if I18n.locale == :ar %>
     $(".arabicfont").attr("style", "font-size: 16px;");
   <% end %>
+  $("#err").css("position", "fixed");
+  $("#err").css("top", "50px");
+  $("#err").css("width", "900px");
+  $("#err").css("margin-left", "10%");
+  $("#err").fadeOut(5000);
 </script>
