--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -211,7 +211,7 @@ function setButtons(){
 
   function show_menu_item(title)
   {
-    var item_html = '<h3 style="margin-top: -50px; font-size: 50px;"> \
+    var item_html = '<h3 style="margin-top: -50px; font-size: 40px;"> \
      ' + title + ' \
   </h3>';
     $("#selected_item").hide();
@@ -252,7 +252,7 @@ function setButtons(){
 <div class="game-zone">
   <div class="game-nav">
     <div class="btn-group" style="height: 66px;">
-       <button type="submit" class="btn btn-inverse dropdown-toggle" data-toggle="dropdown" href="#" style= "width : 130px; height: 67px;">
+       <button type="submit" class="btn dropdown-toggle" data-toggle="dropdown" href="#" style="width : 130px; height: 55px; margin-top:10px; border: medium none;">
         <span class="caret"></span>
         <img src="/assets/gear.png"/>  
        </button>
@@ -285,8 +285,8 @@ function setButtons(){
   <% else I18n.locale==:en %>
   <div class="game-zone">
   <div class="game-nav">
-    <div class="btn-group" style="height: 66px;">
-       <button type="submit" class="btn btn-inverse dropdown-toggle" data-toggle="dropdown" href="#" style= "width : 130px; height: 67px; margin-right:650px;">
+    <div class="btn-group" >
+       <button type="submit" class="btn dropdown-toggle" data-toggle="dropdown" style="width : 130px; height: 55px; margin-top:10px; border: medium none;" href="#">
         <span class="caret"></span>
         <img src="/assets/gear.png"/>  
        </button>
