[issue #350] fixed issues with css

--- a/arability/app/views/pages/home.html.erb
+++ b/arability/app/views/pages/home.html.erb
@@ -282,7 +282,7 @@
   <% end %>
   $("#err").css("position", "fixed");
   $("#err").css("top", "50px");
-  $("#err").css("width", "900px");
-  $("#err").css("margin-left", "10%");
+  $("#err").css("left", "10%");
+  $("#err").css("right", "10%");
   $("#err").fadeOut(5000);
 </script>
