--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -86,7 +86,7 @@
                 <%= link_to keyword, search_path(search: keyword, project_id: @project.id), :method => :post %>
               </td>
               <td style="text-align:center">
-                <%= collection_select(:synonym_name , :text, @words[count].synonyms.collect {|syn| syn} , :id, :name, {selected: @synonyms[count].id}, {:class => 'select_change', name: 'normalSelect', id: 'synonym_select', style:'width:50%'}) %>
+                <%= collection_select(:synonym_name , :text, @words[count].synonyms.collect {|syn| syn} , :id, :name, { selected: @synonyms[count].id}, {:class => 'select_change', name: 'normalSelect', id: 'synonym_select', style:'width:50%' }) %>
               </td>
               <td style="text-align:center; vertical-align: middle;" >
                 <%= link_to t(:remove_from_project), {action: "remove_word", controller: "projects", project_id: @project.id, word_id: @words[count].id}, {style:"color:#FF0000", class: "css_class"} %>
@@ -102,16 +102,16 @@
                   <input type="text"  class="search-query autocomplete" name="keyword_search" id ="selected_keyword" autocomplete="off" placeholder="search keyword here") ></input>
                 </div>
                 <% else %>
-                 <div class="input-append" style="margin-top:10px;" >
-                  <input type="text"  class="search-query autocomplete" name="keyword_search"  id ="selected_keyword" autocomplete="off" placeholder="ابحث عن كلمة هنا") ></input>
+                 <div class="input-append" style="margin-top:10px;">
+                  <input type="text" class="search-query autocomplete" name="keyword_search" id ="selected_keyword" autocomplete="off" placeholder="ابحث عن كلمة هنا") ></input>
                 </div>
                 <% end %>
               </td> 
               <td style="text-align:center" >
-                <%= collection_select(:synonym_name , :text, [], :id, :name, {prompt: t(:enter_word_first) }, {:class=>'input_synonym', name: 'select_menu', id: 'selected_synonym', disabled: true, style:'width:70%; margin-top:10px;'}) %>
+                <%= collection_select(:synonym_name , :text, [], :id, :name, { prompt: t(:enter_word_first) }, { :class=>'input_synonym', name: 'select_menu', id: 'selected_synonym', disabled: true, style:'width:70%; margin-top:10px;' }) %>
               </td> 
               <td style="text-align:center">
-                <%= link_to t(:add_to_project), {action:"add_word_inside_project", controller:"projects", project_id: @project.id, keyword:"download", synonym_id:395},{style:"font-size:15px; text-align:center; margin-top:10px;", onclick:"compute_and_click()", class:"btn btn-primary", id:"add_button",disabled:"true", type:"submit" } %>
+                <%= link_to t(:add_to_project), { action:"add_word_inside_project", controller:"projects", project_id: @project.id, keyword:"download", synonym_id:395 }, { style:"font-size:15px; text-align:center; margin-top:10px;", onclick:"compute_and_click()", class:"btn btn-primary", id:"add_button",disabled:"true", type:"submit" } %>
              </td>
             </tr>
       </table>
@@ -126,7 +126,7 @@
       $.ajax({
         type: "GET",
         url: "/developers/projects/"+"<%= @project.id %>"+"/change_synonym",
-        data: { synonym_id: new_synonym_id, keyword: "download",project_id: "<%= @project.id %>" },
+        data: { synonym_id: new_synonym_id, keyword: "download", project_id: "<%= @project.id %>" },
         success: function(){ 
           update_adding_synonym_alerts("<%= t(:Synonym_changed_successfully) %>"); 
         }
@@ -148,7 +148,7 @@
       if(item.charAt(item.length-1) == ">"){
        item = item.substring(0,item.indexOf("<"));
      }
-     return item
+     return item;
     }
   });
   
@@ -180,10 +180,10 @@
     var keyword_name = $("#selected_keyword").val();
     var synonym_id = $("#selected_synonym option:selected").val();
     var keyword_in_params = "keyword="+keyword_name;
-    var locale_in_params = "&locale="+"<%= I18n.locale %>"
-    var synonym_id_in_params = "&synonym_id="+synonym_id
-    var url = "/developers/projects/"+"<%= @project.id %>"+"/add_word_inside_project?"
-    var complete_url = url + keyword_in_params + locale_in_params + synonym_id_in_params
+    var locale_in_params = "&locale="+"<%= I18n.locale %>";
+    var synonym_id_in_params = "&synonym_id="+synonym_id;
+    var url = "/developers/projects/"+"<%= @project.id %>"+"/add_word_inside_project?";
+    var complete_url = url + keyword_in_params + locale_in_params + synonym_id_in_params; 
     if($("#add_button").attr("disabled") == "disabled" ){
       return;
     }
