[Issue #186][WIP] added category to word

--- a/arability/app/views/guest/sign_up.html.erb
+++ b/arability/app/views/guest/sign_up.html.erb
@@ -35,7 +35,7 @@
       </div>
     </div>
     <div class="span9">
-      <div class="well">
+      <div class="well" style="width : 700px;">
 <%= form_for(resource, :url => guest_signing_up_path) do |f| %>
     <% if @errors != nil %>
       <%if @errors.is_a?(Hash)%>
