--- a/arability/app/views/devise/registrations/new_social.html.erb
+++ b/arability/app/views/devise/registrations/new_social.html.erb
@@ -15,22 +15,18 @@
     <% end %>
 
     <div class="container">
-        <div class="control-group <%= @provider == 'twitter' ? ' ' : 'success' %>">
-            <div class="controls">
-                <%= f.label t(:email), class: "control-label" %>
-                <% if @provider == "twitter" %>
-                  <%= f.email_field :email, style: "margin-left: 10px;", value: @email %>
-                <% else %>
-                  <%= f.email_field :email, :style => "margin-left: 10px;", :value => @email, :readonly => "readonly", :id => "inputSuccess"  %>
-                <% end %>
-            </div>
+        <div class="control-group <%= (@provider == 'twitter') or (@errors and @errors.length > 0) ? ' ' : 'success' %>">
+            <%= f.label t(:email), class: "control-label" %>
+            <% if (@provider == 'twitter') or (@errors and @errors.length > 0) %>
+              <%= f.email_field :email, style: "margin-left: 10px;", value: @email %>
+            <% else %>
+                <%= f.email_field :email, :style => "margin-left: 10px;", :value => @email, :readonly => "readonly", :id => "inputSuccess"  %>
+            <% end %>
         </div></br>
 
         <div class="control-group success">
-            <div class="controls">
-                <%= f.label t(:username), :class => "control-label" %>
-                <%= f.text_field :username, :style => "margin-left: 10px;", :value => @username, :id => "inputSuccess" %>
-            </div>
+            <%= f.label t(:username), :class => "control-label" %>
+            <%= f.text_field :username, :style => "margin-left: 10px;", :value => @username, :id => "inputSuccess" %>
         </div></br>
 
         <div class="control-group <%= @provider == 'twitter' ? ' ' : 'success' %>">
@@ -55,13 +51,13 @@
                     ['اخري','others']]), {}, {:style => "margin-left: 10px;" }) %>
         <% else %>
             <span style="margin-left: 10px;">
-                <%= f.country_select :country, [ "Egypt", "Lebanon", "Jordan" ]%>
+                <%= f.country_select :country, ["Egypt", "Lebanon", "Jordan" ]%>
             </span>
         <% end %></div></br>
 
         <div><%= f.label t(:education_level), :class => "control-label" %>
         <% if I18n.locale == :ar %>
-            <%= f.select(:education_level, options_for_select(['',['مدرسة','School'],['جامعة','University'],
+            <%= f.select(:education_level, options_for_select([['',''],['مدرسة','School'],['جامعة','University'],
             ['خريج','Graduate']]), {}, { :style => "margin-left: 10px;" }) %>
         <% else %>
             <%= f.select(:education_level, options_for_select(['','School','University','Graduate']), {}, { :style => "margin-left: 10px;" }) %>
