--- a/arability/app/views/admin/make_admin.html.erb
+++ b/arability/app/views/admin/make_admin.html.erb
@@ -1,11 +1,10 @@
 <div class="container admin">
 	<div class="row">
 		<%= render partial: "sidebar-nav", locals: {active: "add-admin"} %>
-		<%= javascript_include_tag "search/autocomplete-script" %>
 		<div class="span9 offset3">
 			<div class="tab-content">
 				<div class="tab-pane well span7 active">
-					<form class="form-horizontal" action="" method="post">
+					<%= form_tag("", method: "post", :class => "form-horizontal") do %>
 						<fieldset>
 							<legend>
 									إضافة مشرف جديدة
@@ -22,12 +21,16 @@
 							<div class="control-group">
 								<label class="control-label" for="inputkeyword">البريد الالكترونى</label>
 								<div class="controls">
-									<input type="text" id="inputkeyword" name="email" placeholder="البريد الالكترونى" class="span4 autocomplete" autocomplete="off">
+									<%= text_field_tag("email", "",
+	  											placeholder: "البريد الالكترونى",
+	  											:class => "span4 autocomplete",
+	  											autocomplete: "off",
+	  											id: "inputkeyword") %>
 									<button type="submit" class="btn btn-primary pull-left">إضافة المشرف</button>
 								</div>
 							</div>
 						</fieldset>
-					</form>
+					<% end %>
 				</div>
 			</div>
 		</div>
