[#198][#199][finished] code and documentation conventions

--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -216,7 +216,8 @@ function setButtons(){
   // Success:
   //   view the hall of fame successfully
   // Failure:
-  //   internet connection
+  //   internet connection failure: a message is displayed upon clicking to view facebook/twitter friends' 
+  //   hall of fame telling the user to check his internet connection
   function hallOfFame(){
     if(nav_locked) {
       return;
