--- a/arability/app/views/devise/registrations/new_social.html.erb
+++ b/arability/app/views/devise/registrations/new_social.html.erb
@@ -40,7 +40,7 @@
 
         <div><%= f.label t(:date_of_birth), :class => "control-label" %>
         <%=  f.date_select :date_of_birth, {start_year: Time.now.year, 
-            end_year: Time.now.year - 95}, style: "margin-left: 10px;" %></div></br> 
+            end_year: Time.now.year - 95, default: @dob}, style: "margin-left: 10px;" %></div></br> 
 
         <div><%= f.label t(:country), :class => "control-label" %>
         <% if I18n.locale == :ar %>
@@ -48,19 +48,23 @@
                     ["الاردن","Jordan"],["السعودية","Saudi Arabia"],["ليبيا","Libya"],["الامارات","United Arab Emirates"],["قطر","Qatar"],["الكويت","Kuwait"],
                     ["العراق","Iraq"],["الجزأئر","Algeria"],["المغرب","Morocco"],["البحرين","Bahrain"],
                     ["موريتانيا","mauritania"],["الصومال","Somalia"],["السودان","Sudan"],["تونس","Tunisia"],
-                    ["اخري","others"]]), {}, {style: "margin-left: 10px;" }) %>
+                    ["اخري","others"]], selected: @country), {}, {style: "margin-left: 10px;" }) %>
         <% else %>
             <span style="margin-left: 10px;">
-                <%= f.country_select :country, ["Egypt", "Lebanon", "Jordan" ]%>
+                <% if @country %>
+                <%= f.country_select :country, ["#{@country}" ,"Egypt", "Lebanon", "Jordan"]%>
+              <% else %>
+                <%= f.country_select :country, ["Egypt", "Lebanon", "Jordan"]%>
+              <% end%>
             </span>
         <% end %></div></br>
 
         <div><%= f.label t(:education_level), :class => "control-label" %>
         <% if I18n.locale == :ar %>
             <%= f.select(:education_level, options_for_select([["",""],["مدرسة","School"],["جامعة","University"],
-            ["خريج","Graduate"]]), {}, { style: "margin-left: 10px;" }) %>
+            ["خريج","Graduate"]], selected: @ed_level), {}, { style: "margin-left: 10px;" }) %>
         <% else %>
-            <%= f.select(:education_level, options_for_select(["","School","University","Graduate"]), {}, { style: "margin-left: 10px;" }) %>
+            <%= f.select(:education_level, options_for_select(["","School","University","Graduate"], selected: @ed_level), {}, { style: "margin-left: 10px;" }) %>
         <% end %></div></br>
 
         <%= f.hidden_field :gid, value: @gid %>
