[Issue #94] Fixed styles

--- a/arability/app/views/search/search_with_filters.html.erb
+++ b/arability/app/views/search/search_with_filters.html.erb
@@ -13,7 +13,7 @@
 				<% end %>
 			<% end %>
 
-    <div style="margin-top:5px">
+    <div style="margin-top:5px; display: inline;">
       <%= t :category_tags %>:
       <a href="#" onclick="submit_category_form();return false;"><%= @categories.join(", ") %></a>
     </div>
