--- a/arability/app/views/keywords/new.html.erb
+++ b/arability/app/views/keywords/new.html.erb
@@ -2,8 +2,12 @@
     <span><%= t :enter_keyword %>:</span>
     <div class="input-append">
       <%= f.text_field :name, tabindex: "1" %>
-      <%= f.submit t(:add_word), :class => "btn btn-primary", style: "font-size: 18px",
-      tabindex: "3" %>
+      <% if I18n.locale == :ar %>
+        <%= f.submit t(:add_word), :class => "btn btn-primary", style: "font-size: 18px;",
+        tabindex: "3" %>
+      <% else %>
+        <%= f.submit t(:add_word), :class => "btn btn-primary", tabindex: "3" %>
+      <% end %>
     </div>
     <input type="hidden" name="override_categories" value="true">
     <select name="category_ids[]" id="categories-autocomplete" multiple="true" style="width: 500px" tabindex="2">
