[#198][#199][finished] handled scenario

--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -236,8 +236,12 @@ function setButtons(){
       cache = document.getElementById("zone").innerHTML;
     }    
     clear();
-    $("#zone").append('<div id="loading" align="center" vertical-align="center" style="padding-top:250px;"><p style="color:white;"><%= t(:loading) %></p><img src="/assets/ajax-loader.gif" alt="loading.." /></div>');
-    setTimeout(function(){$.get("/games/fame")},100);
+    if(isGuest == true) {
+      $("#zone").append('<div id="loading" align="center" vertical-align="center" style="padding-top:250px;"><p style="color:white;"><%= t(:have_to_sign_in) %></p></div>');
+    } else {
+      $("#zone").append('<div id="loading" align="center" vertical-align="center" style="padding-top:250px;"><p style="color:white;"><%= t(:loading) %></p><img src="/assets/ajax-loader.gif" alt="loading.." /></div>');
+      setTimeout(function(){$.get("/games/fame")},100);
+    }
     // $($.get("/games/fame")).load(function(){
     //   $("#loading").fadeOut();  
     // });
@@ -298,7 +302,7 @@ function setButtons(){
 
 <div class="game-zone">
   <div class="game-nav">
-    <div class="nav-box btn btn-inverse" id ="navItems" onclick="hallOfFame()">الرتبة</div>
+    <div class="nav-box btn btn-inverse" id ="navItems" onclick="hallOfFame()"><%= t(:rank) %></div>
     <div class="nav-box btn btn-inverse" id = "navItems" onclick="showPrizes()">جوائز</div>
     <div class="nav-box btn btn-inverse" id="navItems" onclick="showTrophies()">الإنجازات</div>
     <div class="nav-box btn btn-inverse" id="navItems" onclick="showProfile()"><%= t(:vote_log_button) %></div>
